# cis7_course_project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  prompt.md
.cache/clangd/index/: card.cpp.787C24C4510C7AA0.idx  card.cpp.E9E89213619B05C2.idx  card.hpp.FD5452E22B6DCDD2.idx  main.cpp.C57FAA219C89EE84.idx
.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
docs/: course_documentation.typ
src/: blackjack.cpp  blackjack.hpp  card.cpp  card.hpp  deck.cpp  deck.hpp  game.hpp  hand.cpp  hand.hpp  main.cpp  terminal_renderer.cpp  terminal_renderer.hpp
src/raylib_renderer/: main.cpp
tests/: card.cpp  deck.cpp  hand.cpp
